--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -1,8 +1,13 @@
-.title {
-  text-align: center;
-  margin-top: 40px;
-}
 
 .Dictionary {
   text-align: center;
 }
+
+.Dictionary section {
+    background-color: #FBE9DF;
+    padding: 25px;
+    border-radius: 8px;
+    box-shadow: 0px 10px 20px rgb(0 0 0 / 10%);
+    margin: 20px 0;
+}
+
