--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 .App {
+  max-width: 800px;
   font-family: 'Playfair Display', serif;
-  margin: 20px auto;
+  margin: 40px auto;
   box-shadow: 0px 10px 20px rgb(0 0 0 / 10%);
 }
 
@@ -23,7 +24,6 @@
 
 .App h1 {
   font-family: 'Playfair Display', serif;
-  font-style: italic;
   font-weight: 400;
   letter-spacing: 1px;
   color: #9A6455;
@@ -32,18 +32,38 @@
   margin-top: 40px;
 }
 
+.App h2 {
+  color: #9A6455;
+  font-size: 24px;
+}
+
+.App .the-word {
+  font-size: 35px;
+  letter-spacing: 1px;
+}
+
 .App-footer {
   text-align: center;
   margin: 30px 0;
 }
 
 @media (max-width: 1000px) {
-  .App h1 {
-    font-size: 28px;
-}
 
-  .App .container {
-  padding: 10px 40px;
+  .App{
+  max-width: 600px;
   }
+
+  .App h1 {
+    font-size: 25px;
+  }
+
+  .App h2 {
+  color: #9A6455;
+  font-size: 20px;
+  }
+
+  .App .the-word {
+    font-size: 26px;
+    }
 
 }
