--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -9,5 +9,14 @@
     margin: 20px 0;
 }
 
+.Dictionary input {
+  font-style: italic;
+  font-size: 13px;
+  height: 25px;
+  background: whitesmoke;
+  border: 1.5px solid rgba(154, 100, 85, 0.5);
+  border-radius: 4px;
+}
+
 
 
