--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,7 @@
   font-weight: 400;
   letter-spacing: 1px;
   color: #9A6455;
-  font-size: 30px;
+  font-size: 36px;
   text-align: center;
   margin-top: 40px;
 }
@@ -42,6 +42,12 @@
   letter-spacing: 1px;
 }
 
+.App .Phonetic .text {
+  opacity: 0.5;
+  font-size: 15px;
+  font-weight: bold;
+}
+
 .App-footer {
   text-align: center;
   margin: 30px 0;
@@ -54,7 +60,7 @@
   }
 
   .App h1 {
-    font-size: 25px;
+    font-size: 28px;
   }
 
   .App h2 {
@@ -63,7 +69,8 @@
   }
 
   .App .the-word {
-    font-size: 26px;
+    font-size: 30px;
+    line-height: 2;
     }
 
 }
