--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -1,21 +1,22 @@
 
 
 .Dictionary section {
-  
     background-color: #FBE9DF;
-    padding: 25px;
-    border-radius: 8px;
-    box-shadow: 0px 10px 20px rgb(0 0 0 / 10%);
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 0px 10px 10px rgb(0 0 0 / 10%);
     margin: 20px 0;
 }
 
 .Dictionary input {
+  width: 100%;
   font-style: italic;
+  padding: 6px 4px;
   font-size: 13px;
   height: 25px;
   background: whitesmoke;
-  border: 1.5px solid rgba(154, 100, 85, 0.5);
-  border-radius: 4px;
+  border: 1px solid rgba(154, 100, 85, 0.5);
+  border-radius: 6px;
 }
 
 
