--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@1,200&display=swap');
+
 
 .App {
   max-width: 900px;
@@ -44,19 +46,39 @@
 
 .App .Phonetic .text {
   opacity: 0.5;
-  font-size: 15px;
+  font-size: 20px;
   font-weight: bold;
 }
 
-.App-footer {
-  text-align: center;
-  margin: 30px 0;
+.App button {
+  background: none;
+  border: none;
+  padding: 5px;
 }
+
+.App .icon-button {
+  color: #9A6455;
+  font-size: 30px;
+}
+
+.App footer {
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+  font-size: 11px;
+  color: rgba(0, 0, 0, 0.8);
+  margin-bottom: 40px auto;
+}
+
+.App footer a {
+  text-decoration: none;
+  color: #9A6455;
+}
+
 
 @media (max-width: 1000px) {
 
-  .App{
-  max-width: 600px;
+  .App {
+    max-width: 600px;
   }
 
   .App h1 {
@@ -64,13 +86,14 @@
   }
 
   .App h2 {
-  color: #9A6455;
-  font-size: 20px;
+    color: #9A6455;
+    font-size: 20px;
   }
 
   .App .the-word {
     font-size: 30px;
     line-height: 2;
-    }
+  }
+
 
 }
