--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -1,15 +1,14 @@
-
-
 .Dictionary section {
-    background-color: #FBE9DF;
-    padding: 30px;
-    border-radius: 10px;
-    box-shadow: 0px 10px 10px rgb(0 0 0 / 10%);
-    margin: 20px 0;
+  background-color: #FBE9DF;
+  padding: 30px;
+  border-radius: 10px;
+  box-shadow: 0px 10px 10px rgb(0 0 0 / 10%);
+  margin: 20px 0;
 }
 
 .Dictionary input {
   width: 100%;
+  font-family: 'Jost', sans-serif;
   font-style: italic;
   padding: 6px 4px;
   font-size: 13px;
@@ -18,6 +17,3 @@
   border: 1px solid rgba(154, 100, 85, 0.5);
   border-radius: 6px;
 }
-
-
-
