--- a/src/Meaning.css
+++ b/src/Meaning.css
@@ -1,18 +1,11 @@
 .Meaning h3 {
   font-size: 24px;
-  line-height: 2;
+  line-height: 1.5;
   font-weight: bold;
 }
 
-.examples,
-.Synonyms {
+.Meaning .example {
   color: #70757a;
   font-style: italic;
   margin-top: 10px;
 }
-
-.examples-title {
-  font-style: italic;
-  font-weight: bold;
-}
-
