--- a/src/Synonyms.css
+++ b/src/Synonyms.css
@@ -4,6 +4,12 @@
 }
 
 .Synonyms li {
-  display: inline;
-  padding-right: 15px;
+  display: inline-block;
+  font-size: 15px;
+  opacity: 0.7;
+  margin: 3px auto;
+  margin-bottom: 25px;
+  margin-right: 20px;
+  padding: 1px;
+  padding-bottom: 1px;
 }
